Fix overflow on languages page

--- a/theme/stylesheets/book/languages.less
+++ b/theme/stylesheets/book/languages.less
@@ -4,6 +4,7 @@
     background: #edece4;
     padding: 40px 0px;
     margin: 0px;
+    overflow: auto;
 
     .inner {
         max-width: 350px;
